# Axross-Recipe

./: README.md
Ambiguous-Search-of-Documents/: .gitignore  README.md  main.py  pyproject.toml
Classification-of-Documents-by-Cluster-Analysis/: .gitignore  README.md  main.py  pyproject.toml
